# learn-sdl2

./: CMakeLists.txt
src/: main.cc
